# deliveryoptimizer

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  MAP_REVERT_AND_ADVANCED_MARKERS.md  README.md  conanfile.py
.github/: pull_request_template.md
app/api/: CMakeLists.txt
app/api/include/deliveryoptimizer/api/: api_server.hpp  observability.hpp  optimization_job_runtime.hpp  optimization_job_store.hpp  server_options.hpp
app/api/include/deliveryoptimizer/api/endpoints/: deliveries_optimize_endpoint.hpp  health_endpoint.hpp  optimization_jobs_endpoint.hpp  optimize_endpoint.hpp  optimize_job_status_endpoint.hpp  osrm_proxy_endpoint.hpp
app/api/include/deliveryoptimizer/api/jobs/: job_store.hpp  migrator.hpp  optimize_job.hpp  runtime_options.hpp  vroom_runner.hpp  worker.hpp
app/api/optimize/: route.ts
app/api/src/: api_server.cpp  forecast_optimizer.cpp  main.cpp  migrate_main.cpp  observability.cpp  optimization_job_runtime.cpp  optimization_job_store.cpp  server_options.cpp  worker_main.cpp
app/api/src/endpoints/: deliveries_optimize_endpoint.cpp  env_utils.hpp  health_endpoint.cpp  job_api_utils.hpp  optimization_jobs_endpoint.cpp  optimize_endpoint.cpp  optimize_job_status_endpoint.cpp  osrm_proxy_endpoint.cpp
app/api/src/jobs/: job_store.cpp  migrator.cpp  optimize_job.cpp  runtime_options.cpp  vroom_runner.cpp  worker.cpp  worker_execution.cpp  worker_execution.hpp
benchmarks/: README.md  compare_reports.py  default_optimize_payload.json  load_optimize.py  run_py_vs_cpp.py
docs/: cpp-local-contributor-setup.md  (+1 more)
tests/: CMakeLists.txt
tests/adapters/osrm_contract/: builds_route_path_with_stable_query_contract_test.cpp  builds_table_path_with_stable_query_contract_test.cpp  route_path_requires_at_least_two_coordinates_test.cpp  table_path_requires_at_least_two_coordinates_test.cpp
tests/adapters/routing_facade/: returns_no_plan_when_deliveries_missing_test.cpp  returns_no_plan_when_vehicles_missing_test.cpp  returns_optimized_plan_for_valid_inputs_test.cpp
tests/adapters/vroom_contract/: build_solve_payload_creates_expected_entity_counts_test.cpp  describe_solve_summary_uses_stable_contract_test.cpp  parse_solve_summary_reads_routes_and_unassigned_test.cpp  parse_solve_summary_returns_nullopt_for_invalid_json_test.cpp  parse_solve_summary_returns_nullopt_when_summary_is_missing_test.cpp
tests/api/: process_claimed_job_uses_solver_finish_time_test.cpp  vroom_runner_availability_test.cpp
tests/api/observability/: renders_prometheus_metrics_test.cpp
tests/application/optimize_service/: returns_no_plan_when_deliveries_missing_test.cpp  returns_no_plan_when_vehicles_missing_test.cpp  returns_optimized_summary_when_inputs_valid_test.cpp
tests/config/: api_runtime_links_drogon_privately_test.cpp  api_thread_count_is_not_hardcoded_to_one_test.cpp  load_server_options_from_env_test.cpp  no_redundant_transitive_links_in_deliveryoptimizer_tests_target_test.cpp  osrm_compose_port_mapping_tracks_internal_port_test.cpp
tests/domain/problem/: describe_problem_uses_stable_contract_test.cpp  empty_when_deliveries_missing_test.cpp  empty_when_vehicles_missing_test.cpp  not_empty_when_inputs_present_test.cpp
tests/integration/e2e/: deliveries_optimize_invalid_payload_returns_validation_error_e2e_test.sh  deliveries_optimize_malformed_json_returns_parse_error_e2e_test.sh  deliveries_optimize_replay_returns_existing_job_e2e_test.sh  deliveries_optimize_requires_idempotency_key_e2e_test.sh  deliveries_optimize_valid_payload_returns_routing_response_e2e_test.sh  e2e_helpers.sh  e2e_stack.env  health_endpoint_returns_ok_e2e_test.sh  optimization_job_valid_payload_returns_routing_response_e2e_test.sh  optimize_rejects_excessive_deliveries_e2e_test.sh  optimize_rejects_negative_deliveries_e2e_test.sh  optimize_valid_query_returns_summary_e2e_test.sh  osrm_nearest_returns_ok_e2e_test.sh  osrm_proxy_blocks_tile_service_e2e_test.sh  osrm_proxy_nearest_returns_ok_e2e_test.sh  vroom_help_is_available_e2e_test.sh
tests/integration/http_server/: deliveries_optimize_endpoint_disabled_by_default_test.sh  deliveries_optimize_enforces_solver_timeout_test.sh  deliveries_optimize_missing_demand_defaults_to_1_test.sh  deliveries_optimize_missing_service_defaults_to_300_test.sh  deliveries_optimize_preserves_job_time_windows_test.sh  deliveries_optimize_preserves_vehicle_start_end_test.sh  deliveries_optimize_preserves_vehicle_time_window_test.sh  deliveries_optimize_rejects_empty_job_time_windows_test.sh  deliveries_optimize_rejects_excessive_body_size_test.sh  deliveries_optimize_rejects_excessive_jobs_test.sh  deliveries_optimize_rejects_excessive_vehicles_test.sh  deliveries_optimize_rejects_excessive_vroom_output_test.sh  deliveries_optimize_rejects_invalid_job_time_windows_test.sh  deliveries_optimize_rejects_out_of_range_coordinates_test.sh  deliveries_optimize_response_includes_external_ids_test.sh  health_and_optimize_test.sh  health_coalesces_cold_osrm_probe_test.sh  health_reports_dependency_readiness_test.sh  health_reports_schema_bootstrap_failure_test.sh  health_requires_ready_worker_test.sh  http_server_helpers.sh  http_server_helpers_keep_port_in_range_test.sh  invalid_port_fails_fast_test.sh  optimization_job_expired_lease_fails_after_max_attempts_test.sh  optimization_job_health_ignores_foreign_workers_test.sh  optimization_job_result_conflict_while_running_test.sh  optimization_job_retried_worker_cannot_clobber_result_test.sh  optimization_job_workers_use_process_unique_ids_test.sh  optimization_jobs_end_to_end_test.sh  optimization_jobs_reject_when_queue_is_full_test.sh  optimize_rejects_excessive_deliveries_test.sh  optimize_rejects_malformed_deliveries_test.sh  optimize_rejects_negative_deliveries_test.sh  osrm_endpoint_not_registered_test.sh  osrm_proxy_forwards_allowed_service_with_query_test.sh  osrm_proxy_rejects_disallowed_service_test.sh  osrm_proxy_rejects_trip_service_test.sh
tests/integration/job_store/: job_store_postgres_integration_test.cpp
tests/integration/routing/: osrm_and_vroom_smoketest.sh  routing_smoketest.env
(+90 files in other folders)
